MAIN .summary left alignment and spacing fix

--- a/css/fifafut16.css
+++ b/css/fifafut16.css
@@ -162,9 +162,13 @@ main h2 {
   font-weight: 500;
   margin-top: 50px;
   margin-bottom: 40px;
-  width: 50%;
-  text-align: right;
   font-weight: 500;
+  padding-left: 100px;
+  display: inline-block;
+}
+main .summary {
+    margin-left: 100px;
+    max-width: 580px;
 }
 main a {
   color:#2B98BC;
